--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
 :root {
-  --background: #ffffff;
+  --background: #ffd3b6;
   --foreground: #171717;
+}
+
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -12,6 +20,7 @@
 
 html,
 body {
+  font-family: "Pretendard-Regular", sans-serif;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -19,7 +28,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Pretendard-Regular", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
