--- a/src/app/components/Header.module.css
+++ b/src/app/components/Header.module.css
@@ -1,13 +1,11 @@
-/* components/Header.module.css */
-
 .header {
   position: fixed;
   top: 0;
-  left: 0; /* 좌측 정렬 추가 */
+  left: 0;
   width: 100%;
-  display: flex; /* flexbox를 사용하여 내부 요소를 정렬 */
-  justify-content: space-between; /* 양 끝 정렬 (로고, 햄버거 메뉴) */
-  align-items: center; /* 세로 중앙 정렬 */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.9);
   border-bottom: 1px solid #e0e0e0;
   padding: 1.5rem 2rem;
@@ -28,6 +26,7 @@
   display: flex;
   justify-content: center;
   gap: 3rem;
+  flex-grow: 1; /* 이 부분이 추가되었습니다 */
 }
 
 .nav a {
