--- a/src/app/components/ProjectModal.module.css
+++ b/src/app/components/ProjectModal.module.css
@@ -171,6 +171,11 @@
   line-height: 1.7;
 }
 
+.linkContainer {
+  text-align: center;
+  margin-top: 2rem;
+}
+
 .projectLink {
   display: inline-block;
   padding: 0.6rem 1.2rem;
